--- a/Project Code/javablock/nbproject/project.properties
+++ b/Project Code/javablock/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/JavaBlock.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
-    ${platforms.JDK_1.7.home}/jre/lib/javaws.jar
+    ${java.home}/lib/javaws.jar
 excludes=
 file.reference.javaws.jar=/usr/lib/jvm/java-6-sun/jre/lib/javaws.jar
 file.reference.javaws.jar-1=/home/razi/Programy/jdk1.7.0/jre/lib/javaws.jar
@@ -42,8 +42,8 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -80,7 +80,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.7
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
