--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Project Code/javablock/nbproject/private/
 /Project Code/javablock/build/
 /Project Code/javablock/dist/
+/Project/FlowchartComponents/nbproject/private/
+/Project/FlowchartComponents/build/
