New tab testing

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Project Code/javablock/dist/
 /Project/FlowchartComponents/nbproject/private/
 /Project/FlowchartComponents/build/
+/Project/FlowchartComponents/dist/
