--- a/MainProjectCode/nbproject/project.properties
+++ b/MainProjectCode/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.JTattoo-1.6.11.jar=JTattoo-1.6.11.jar
+file.reference.RavJButtonDrag.jar=RavJButtonDrag.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.JTattoo-1.6.11.jar}
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${file.reference.RavJButtonDrag.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
