--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /MainProjectCode/dist/
 /Javablock Code/javablock/nbproject/private/
 *.class
+/Revised JB version/nbproject/private/
+/Revised JB version/dist/
+/Revised JB version/build/
