--- a/Revised JB version/nbproject/private/private.properties
+++ b/Revised JB version/nbproject/private/private.properties
@@ -5,4 +5,4 @@ file.reference.javaws.jar=C:\\Users\\Lelethu Zazaza\\Downloads\\JavaBlock-master
 file.reference.javaws.jar-1=C:\\Users\\Lelethu Zazaza\\Downloads\\JavaBlock-master\\JavaBlock_Revision1\\home\\razi\\Programy\\jdk1.7.0\\jre\\lib\\javaws.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Lelethu Zazaza\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\Goodness\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
