--- a/Revised JB version/nbproject/project.properties
+++ b/Revised JB version/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/JavaBlock_Revision1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
-    ${java.home}/lib/javaws.jar
+    ${platforms.JDK_1.7.home}/jre/lib/javaws.jar
 excludes=
 file.reference.javaws.jar=usr/lib/jvm/java-6-sun/jre/lib/javaws.jar
 file.reference.javaws.jar-1=home/razi/Programy/jdk1.7.0/jre/lib/javaws.jar
