--- a/Revised JB version/nbproject/project.properties
+++ b/Revised JB version/nbproject/project.properties
@@ -27,8 +27,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/JavaBlock_Revision1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=\
-    ${java.home}/lib/javaws.jar
+endorsed.classpath=
 excludes=
 file.reference.javaws.jar=usr/lib/jvm/java-6-sun/jre/lib/javaws.jar
 file.reference.javaws.jar-1=home/razi/Programy/jdk1.7.0/jre/lib/javaws.jar
@@ -67,7 +66,7 @@ jnlp.applet.height=300
 jnlp.applet.width=300
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.mixed.code=default
 jnlp.offline-allowed=true
 jnlp.signed=false
