Whatever that thing is...

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /Revised JB version/dist/
 /Revised JB version/build/
 /Main Project/XoliswaMVC/dist/
+/Unit Testing/Revised JB version/nbproject/private/
