--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Revised JB version/build/
 /Main Project/XoliswaMVC/dist/
 /Unit Testing/Revised JB version/nbproject/private/
+/Unit Testing/Revised JB version/build/
