Preperation for demo

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /Main Project/XoliswaMVC/dist/
 /Unit Testing/Revised JB version/nbproject/private/
 /Unit Testing/Revised JB version/build/
+Revised JB version/nbproject/jnlp-impl.xml
+*.xml
