--- a/Unit Testing/Revised JB version/nbproject/private/private.properties
+++ b/Unit Testing/Revised JB version/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Hlavutello\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=/home/tshepiso/.netbeans/8.0.2/build.properties
