--- a/Revised JB version/nbproject/project.properties
+++ b/Revised JB version/nbproject/project.properties
@@ -32,12 +32,14 @@ excludes=
 file.reference.javaws.jar=usr/lib/jvm/java-6-sun/jre/lib/javaws.jar
 file.reference.javaws.jar-1=home/razi/Programy/jdk1.7.0/jre/lib/javaws.jar
 file.reference.JTattoo-1.6.11.jar=JTattoo-1.6.11.jar
+file.reference.seaglasslookandfeel-0.2.jar=seaglasslookandfeel-0.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.JTattoo-1.6.11.jar}
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${file.reference.seaglasslookandfeel-0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
