--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Unit Testing/Revised JB version/build/
 Revised JB version/nbproject/jnlp-impl.xml
 *.xml
+/Javablock/Javablock Code/javablock/build/
