--- a/Javablock/Javablock Code/javablock/nbproject/private/private.properties
+++ b/Javablock/Javablock Code/javablock/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Goodness\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Hlavutello\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
