--- a/Revised JB version/nbproject/project.properties
+++ b/Revised JB version/nbproject/project.properties
@@ -32,14 +32,32 @@ excludes=
 file.reference.javaws.jar=usr/lib/jvm/java-6-sun/jre/lib/javaws.jar
 file.reference.javaws.jar-1=home/razi/Programy/jdk1.7.0/jre/lib/javaws.jar
 file.reference.JTattoo-1.6.11.jar=JTattoo-1.6.11.jar
+file.reference.quaqua.jar=quaqua.jar
 file.reference.seaglasslookandfeel-0.2.jar=seaglasslookandfeel-0.2.jar
+file.reference.synthetica.jar=synthetica.jar
+file.reference.syntheticaBlackStar.jar=syntheticaBlackStar.jar
+file.reference.syntheticaBlueIce.jar=syntheticaBlueIce.jar
+file.reference.syntheticaBlueMoon.jar=syntheticaBlueMoon.jar
+file.reference.syntheticaBlueSteel.jar=syntheticaBlueSteel.jar
+file.reference.syntheticaSilverMoon.jar=syntheticaSilverMoon.jar
+file.reference.syntheticaSkyMetallic.jar=syntheticaSkyMetallic.jar
+file.reference.weblaf-complete-1.28.jar=weblaf-complete-1.28.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.JTattoo-1.6.11.jar}:\
-    ${file.reference.seaglasslookandfeel-0.2.jar}
+    ${file.reference.seaglasslookandfeel-0.2.jar}:\
+    ${file.reference.syntheticaBlackStar.jar}:\
+    ${file.reference.synthetica.jar}:\
+    ${file.reference.syntheticaBlueSteel.jar}:\
+    ${file.reference.syntheticaBlueIce.jar}:\
+    ${file.reference.syntheticaSkyMetallic.jar}:\
+    ${file.reference.syntheticaBlueMoon.jar}:\
+    ${file.reference.syntheticaSilverMoon.jar}:\
+    ${file.reference.weblaf-complete-1.28.jar}:\
+    ${file.reference.quaqua.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
